--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,35 @@
 <html>
   <head>
     <meta charset="utf8">
+    <title>{{ title }}</title>
+    {% include head.html %}
+    <style>
+      body {
+        font-family: 'Microsoft Yahei', 'Hiragino Sans GB', 'WenQuanYi Micro Hei', sans-serif;
+        font-size: 16px;
+        line-height: 27px;
+        background-color: #f9f9f5;
+      }
+    </style> 
   </head>
   <body>
     {% include header.html %}
-    {{ content }}
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          {{ content }}  
+        </div>
+        <div class="col-md-4">
+          <!--{% include header.html %}
+            {% for post in site.posts %}
+              <div class="row">
+                <div class="col-md-12"><a href="{{ post.url }}">{{ post.title }}</a></div>
+              </div>
+            {% endfor %}
+          {% include footer.html %}-->
+        </div>
+      </div>
+    </div>
     {% include footer.html %}
   </body>
 </html>
