--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf8">
     <title>{{ title }}</title>
+    <link rel="stylesheet" href="/css/highlight.css">
     {% include head.html %}
-    <style>
-      body {
-        font-family: 'Microsoft Yahei', 'Hiragino Sans GB', 'WenQuanYi Micro Hei', sans-serif;
-        font-size: 16px;
-        line-height: 27px;
-        background-color: #f9f9f5;
-      }
-    </style> 
   </head>
   <body>
     {% include header.html %}
