--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,12 @@
+<meta charset="utf8">
+<style>
+  body {
+    font-family: 'Microsoft Yahei', 'Hiragino Sans GB', 'WenQuanYi Micro Hei', sans-serif;
+    font-size: 16px;
+    line-height: 27px;
+    background-color: #f9f9f5;
+  }
+</style> 
 <link rel="stylesheet" href="/lib/bootstrap-3.2.0-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/lib/bootstrap-3.2.0-dist/css/bootstrap-theme.min.css">
 <script src="/lib/jquery-2.1.1.min.js"></script>
