--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,10 +23,10 @@
         </div>
       </div>
     </div>
-    <div id="disqus_thread"></div>
+    <div id="disqus_thread" class="container"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'yibuyisheng'; // required: replace example with your forum shortname 这个地方需要改成你配置的网站名
+        var disqus_shortname = 'yibuyisheng';
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
