--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ title }}</title>
+    <title>{{ page.title }}</title>
+    <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/highlight.css">
     {% include head.html %}
   </head>
