--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,14 @@
     <title>{{ page.title }}</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/highlight.css">
+    <style>
+    * {
+        font-family: 'Avenir Next',Avenir,'Helvetica Neue',Helvetica,'Lantinghei SC','Hiragino Sans GB','Microsoft YaHei',STHeiti,'WenQuanYi Micro Hei',SimSun,sans-serif!important;
+    }
+    p, ul {
+        line-height: 25px;
+    }
+    </style>
     {% include head.html %}
   </head>
   <body>
